# CurriculumAndScheduleDesigner

./: Readme.md  launchscriptLinux.sh  launchscriptMac.sh  launchscriptWin.bat  pyproject.toml
.claude/: settings.local.json
data/: data.json
experiement/: CourseWidget.py  CurriculumDesignerGUI.py  dragDrop.py  dragDropView.py  sizeAdjust.py
launchscripts/: launchmain_mac.sh
saves/: ABM.json  ABM_Template.json  Adham.json  Adham_02.json  Adham_03.json  Aiden.json  Alexandra.json  AllClasses.json  AnimationTrack.json  Anna.json  Aunesty.json  Aunesty3.json  Aunesty4_fact_checked_on_Dec_10th.json  Aunesty5_NewPlan.json  Azzeem.json  Azzeem_v2.json  Azzeem_v3.json  Brandin Stanfield.json  Brandin.json  Bryan Lewis 2.json  Bryan Lewis.json  Burke Hayden.json  Burke Start.json  CarlosPalacios3YearPlan.json  Christopher Rodriguez.json  Christopher_W01327414.json  Daisy.json  Dasiy.json  Dasiy_CIS.json  Dasiy_CIS2.json  Dasiy_Taken.json  Dasiy_Taken_AndNew.json  Dasiy_Taken_Org.json  Denise B Becerra.json  DiegoMauricioRivera.json  DiegoRivera.json  ElijahKnesek.json  Gabrial7.json  GameProgramming New Ideas.json  GameProgrammingTrack.json  (+68 more)
saves/4YearPlans/: Animation.json  ProductionMgmt.json  Progamming.json
saves/MGD/: CarlosGarcia.json  EmilySidler.json  EmilySidler2.json  EmilySidler3.json  JustinGallardo.json  (+3 more)
src/: AssetManager.py  Course.py  CourseConfigureWidget.py  CourseList.py  CourseListWidget.py  CurriculumDesigner.py  CurriculumDesignerGUI.py  CurriculumPlaner.py  DraggableListWidget.py  PathUtility.py  SaveUtilties.py  SearchCourseWidget.py
(+22 files in other folders)
