[project]
name = "curriculumdesigner"
version = "0.1.0"
description = "a drag and drop interface to help with planning student 4 year plans"
authors = [
    {name = "jingtian li"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    {include ="degreeplaner",from="src"}
]

[tool.poetry.scripts]
planer="degreeplaner.CurriculumPlaner:main"